[package]
name = "cryptkeyper"
version = "0.1.0"
edition = "2021"
authors = ["Michael Luna <michael.angelo.luna1@gmail.com>"]
description = "RFC 8391 compliant XMSS (eXtended Merkle Signature Scheme) post-quantum cryptography implementation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mluna030/CryptKeyPer"
homepage = "https://github.com/mluna030/CryptKeyPer"
documentation = "https://docs.rs/cryptkeyper"
keywords = ["cryptography", "post-quantum", "xmss", "signatures", "quantum-resistant"]
categories = ["cryptography", "algorithms", "science"]
readme = "README.md"
exclude = ["target/", ".git/", "*.log"]

[dependencies]
# Core cryptography
rand = "0.8"
sha2 = "0.10"
sha3 = "0.10"  # For SHAKE128/256 support
hmac = "0.12"
hex = "0.4"
base64 = "0.22.1"

# Error handling and security
thiserror = "1.0"
zeroize = { version = "1.6", features = ["derive"] }
subtle = "2.5"  # Constant-time operations

# Performance and caching
lru = "0.12"
rayon = { version = "1.8", optional = true }  # Parallel processing
dashmap = "5.5"  # Concurrent hash maps

# State management and persistence
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"  # Binary serialization
aes-gcm = "0.10"  # Encryption for state storage
scrypt = "0.11"  # Key derivation for encryption
memmap2 = { version = "0.9", optional = true }  # Memory-mapped files

# Utilities
parking_lot = "0.12"  # Better synchronization primitives

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }  # Benchmarking
tempfile = "3.8"  # Temporary files for tests

[[bench]]
name = "xmss_benchmarks"
harness = false

[features]
default = ["std"]
std = []
# Optional features for different use cases
parallel = ["rayon"]
mmap-storage = ["memmap2"]