[package]
name = "cryptkeyper"
version = "0.1.0"
edition = "2021"
authors = ["Michael Luna <michael.angelo.luna1@gmail.com>"]
description = "RFC 8391 compliant XMSS (eXtended Merkle Signature Scheme) post-quantum cryptography implementation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mluna030/CryptKeyPer"
homepage = "https://github.com/mluna030/CryptKeyPer"
documentation = "https://docs.rs/cryptkeyper"
keywords = ["cryptography", "post-quantum", "xmss", "signatures", "quantum-resistant"]
categories = ["cryptography", "algorithms", "science"]
readme = "README.md"
exclude = ["target/", ".git/", "*.log"]

[dependencies]
# Core cryptography
rand = "0.8"
sha2 = { version = "0.10", features = ["asm"] }  # Hardware acceleration
sha3 = "0.10"  # For SHAKE128/256 support
hmac = "0.12"
hex = "0.4"
base64 = "0.22.1"
num-integer = "0.1.45"

# Error handling and security
thiserror = "1.0"
zeroize = { version = "1.6", features = ["derive"] }
subtle = "2.5"  # Constant-time operations

# Performance and caching
lru = "0.12"
rayon = { version = "1.8", optional = true }  # Parallel processing
dashmap = "5.5"  # Concurrent hash maps

# State management and persistence
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"  # Binary serialization
aes-gcm = "0.10"  # Encryption for state storage
scrypt = "0.11"  # Key derivation for encryption
memmap2 = { version = "0.9", optional = true }  # Memory-mapped files

# Utilities
parking_lot = "0.12"  # Better synchronization primitives

# Platform-specific optimizations
raw-cpuid = { version = "11.0", optional = true }  # CPU feature detection

# WebAssembly support
getrandom = { version = "0.2", features = ["js"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

# Python bindings
pyo3 = { version = "0.24.1", features = ["extension-module"], optional = true }

# C FFI
libc = { version = "0.2", optional = true }

# Hardware acceleration
opencl3 = { version = "0.9", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }  # Benchmarking
tempfile = "3.8"  # Temporary files for tests

[[bench]]
name = "xmss_benchmarks"
harness = false

[features]
default = ["std"]
std = []

# Performance features
parallel = ["rayon"]
mmap-storage = ["memmap2"]

# Hardware acceleration
avx2 = ["raw-cpuid"]
avx512 = ["raw-cpuid"]
intel-sha = ["raw-cpuid"]
neon = []  # ARM NEON support

# Platform support
wasm = ["wasm-bindgen", "js-sys", "getrandom", "console_error_panic_hook", "serde-wasm-bindgen"]
python = ["pyo3"]
c-ffi = ["libc"]

# Hardware acceleration
opencl = ["opencl3"]

# Research features
pqc-graveyard = []
formal-verification = []

# Build profiles
no-std = []

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
members = [
    ".",
    "cryptkeyper-api",
]